force-app/main/default/objects/DD_Work_Order__c/DD_Work_Order__c.object-meta.xml
<CustomObject>
    <label>DD Work Order</label>
    <nameField>
        <label>DD Work Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>