force-app/main/default/objects/DD_Work_Order__c/fields/Base_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Base_Quantity__c</fullName>
    <label>Base Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>