force-app/main/default/objects/DD_Work_Order__c/fields/Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Name__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <inlineHelpText>This can be used to label collections of work orders that represent certain scenarios, e.g. a &quot;Student Household&quot; or &quot;New Applicant&quot;. I&apos;ve kept this as a text field to allow spreadsheet uploads for easy deployment of existing work orders into new orgs.</inlineHelpText>
    <label>Collection Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>