force-app/main/default/objects/DD_Work_Order__c/fields/Discrete_Values_Only__c.field-meta.xml
<CustomField>
    <fullName>Discrete_Values_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discrete Values Only</label>
    <type>Checkbox</type>
</CustomField>