force-app/main/default/objects/DD_Work_Order__c/fields/Exclude_Fields__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Fields__c</fullName>
    <inlineHelpText>This comma-separated list of values can be used to exclude fields from record generation, preventing errors from failed field validations. This list of fields does not get cleared when JSON is refreshed.</inlineHelpText>
    <label>Exclude Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>