force-app/main/default/objects/DD_Work_Order__c/fields/Generate_Random_Values__c.field-meta.xml
<CustomField>
    <fullName>Generate_Random_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Random Values</label>
    <type>Checkbox</type>
</CustomField>