force-app/main/default/objects/DD_Work_Order__c/fields/Job_Complete_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Job_Complete_Timestamp__c</fullName>
    <label>Job Complete Timestamp</label>
    <type>DateTime</type>
</CustomField>