force-app/main/default/objects/DD_Work_Order__c/fields/Job_Start_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Timestamp__c</fullName>
    <label>Job Start Timestamp</label>
    <type>DateTime</type>
</CustomField>