force-app/main/default/objects/DD_Work_Order__c/fields/JSON_Discrete_Values__c.field-meta.xml
<CustomField>
    <fullName>JSON_Discrete_Values__c</fullName>
    <inlineHelpText>These are non-random values that will populate records after the rest of the values have been set. These are populated by default when JSON is refreshed to ensure that records have discrete values for required fields. Basic merge fields are supported : 
-[[FNAME]] gets a random first name.
-[[LNAME]] gets a random last name, and will draw from the same celebrity name if populating the same field as LNAME.</inlineHelpText>
    <label>JSON) Discrete Values</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>