force-app/main/default/objects/DD_Work_Order__c/fields/JSON_QA_Output__c.field-meta.xml
<CustomField>
    <fullName>JSON_QA_Output__c</fullName>
    <label>JSON) QA Output</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>