force-app/main/default/objects/DD_Work_Order__c/fields/JSON_Random_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>JSON_Random_Picklist_Values__c</fullName>
    <inlineHelpText>These pipe-delimited lists of picklist values provide the list from which the generator randomly picks a picklist value to populate a field. This includes null (blank, &apos;&apos;) values by default, added to the beginning of each list. Just remove the beginning pipe delimiter &quot;|&quot; to exclude blank values from the generator.</inlineHelpText>
    <label>JSON) Random Picklist Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>