force-app/main/default/objects/DD_Work_Order__c/fields/JSON_Random_Reference_Queries__c.field-meta.xml
<CustomField>
    <fullName>JSON_Random_Reference_Queries__c</fullName>
    <inlineHelpText>This provides a JSON scaffolding to build queries to populate reference fields. When JSON is refreshed, these are used to populated the default values for required fields.</inlineHelpText>
    <label>JSON) Random Reference Queries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>