force-app/main/default/objects/DD_Work_Order__c/fields/JSON_Random_Value_Ranges__c.field-meta.xml
<CustomField>
    <fullName>JSON_Random_Value_Ranges__c</fullName>
    <inlineHelpText>These pipe-delimited ranges represent the minimum and maximum values that can be calculated for a field. They are inclusive.</inlineHelpText>
    <label>JSON) Random Value Ranges</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>