force-app/main/default/objects/DD_Work_Order__c/fields/JSON_Required_Merge_Values__c.field-meta.xml
<CustomField>
    <fullName>JSON_Required_Merge_Values__c</fullName>
    <label>JSON) Required / Merge Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>