force-app/main/default/objects/DD_Work_Order__c/fields/Junction_Lookup_1__c.field-meta.xml
<CustomField>
    <fullName>Junction_Lookup_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junction Lookup 1</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>DD Work Orders</relationshipLabel>
    <relationshipName>DD_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>