force-app/main/default/objects/DD_Work_Order__c/fields/Junction_Lookup_2__c.field-meta.xml
<CustomField>
    <fullName>Junction_Lookup_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junction Lookup 2</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>DD Work Orders (Junction Lookup 2)</relationshipLabel>
    <relationshipName>DD_Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>