force-app/main/default/objects/DD_Work_Order__c/fields/Junction_Lookup_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Junction_Lookup_Field_1__c</fullName>
    <label>Junction Lookup Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>