force-app/main/default/objects/DD_Work_Order__c/fields/Junction_Lookup_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Junction_Lookup_Field_2__c</fullName>
    <label>Junction Lookup Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>