force-app/main/default/objects/DD_Work_Order__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>This is the object created by the record generator. These values represent the global picklist, &quot;Object API Names&quot;. This picklist is shared with the DD Test Collection object.</inlineHelpText>
    <label>Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_API_Names</valueSetName>
    </valueSet>
</CustomField>