force-app/main/default/objects/DD_Work_Order__c/fields/Object_Role__c.field-meta.xml
<CustomField>
    <fullName>Object_Role__c</fullName>
    <label>Object Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
                <default>true</default>
                <label>Parent</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Junction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>