force-app/main/default/objects/DD_Work_Order__c/fields/Parent_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID_Field__c</fullName>
    <defaultValue>&quot;Id&quot;</defaultValue>
    <description>This represents the field on the parent record that should populate the lookup field on the child record, e.g. AccountId for Account (or just Id), PersonContactId for the Contact side of PersonAccounts, etc.</description>
    <inlineHelpText>This represents the field on the parent record that should populate the lookup field on the child record, e.g. AccountId for Account (or just Id), PersonContactId for the Contact side of PersonAccounts, etc.</inlineHelpText>
    <label>Parent ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>