force-app/main/default/objects/DD_Work_Order__c/fields/Parent_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field__c</fullName>
    <inlineHelpText>This is the field on the object being generated by the work order that is populated with a reference to the records created via the parent work order.</inlineHelpText>
    <label>Parent Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>