force-app/main/default/objects/DD_Work_Order__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <formula>TEXT( Parent_Work_Order__r.Object_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Object</label>
    <type>Text</type>
</CustomField>