force-app/main/default/objects/DD_Work_Order__c/fields/Parent_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Parent_Records_Created__c</fullName>
    <formula>Parent_Work_Order__r.Total_Records_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Records Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>