force-app/main/default/objects/DD_Work_Order__c/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the work order that represents a parent object of the object being created through the current work order. This work order represents the object populated through the Parent Lookup Field.</inlineHelpText>
    <label>Parent Work Order</label>
    <referenceTo>DD_Work_Order__c</referenceTo>
    <relationshipLabel>Child Work Orders</relationshipLabel>
    <relationshipName>Child_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>