force-app/main/default/objects/DD_Work_Order__c/fields/Passed_QA__c.field-meta.xml
<CustomField>
    <fullName>Passed_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed QA?</label>
    <type>Checkbox</type>
</CustomField>