force-app/main/default/objects/DD_Work_Order__c/fields/QA_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>QA_Process_Type__c</fullName>
    <label>QA Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Create</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>Lead Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>