force-app/main/default/objects/DD_Work_Order__c/fields/Quantity_Per_Parent__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Per_Parent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity Per Parent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>