force-app/main/default/objects/DD_Work_Order__c/fields/Random_Quantity_Per_Parent__c.field-meta.xml
<CustomField>
    <fullName>Random_Quantity_Per_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this will generate a random number of records per parent, within the pipe-delimited range found in the field &quot;Random Range&quot;.</inlineHelpText>
    <label>Random Quantity Per Parent</label>
    <type>Checkbox</type>
</CustomField>