force-app/main/default/objects/DD_Work_Order__c/fields/Random_Range__c.field-meta.xml
<CustomField>
    <fullName>Random_Range__c</fullName>
    <inlineHelpText>Pipe-delimited range values determine the lower and upper bounds for the record generation multipler, e.g. &quot;0|3&quot;.</inlineHelpText>
    <label>Random Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>