force-app/main/default/objects/DD_Work_Order__c/fields/Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_API_Name__c</fullName>
    <inlineHelpText>This is the DeveloperName for a record type. This will set as the default for the record when left blank.</inlineHelpText>
    <label>Record Type API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>