force-app/main/default/objects/DD_Work_Order__c/fields/Required_and_Merge_Fields_Only__c.field-meta.xml
<CustomField>
    <fullName>Required_and_Merge_Fields_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required and Merge Fields Only</label>
    <type>Checkbox</type>
</CustomField>