force-app/main/default/objects/DD_Work_Order__c/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <inlineHelpText>This provides a visual reminder of which fields on the object are required. These do not need to be populated by discrete values necessarily.</inlineHelpText>
    <label>Required Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>