force-app/main/default/objects/DD_Work_Order__c/fields/Total_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Created__c</fullName>
    <label>Total Records Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>