force-app/main/default/objects/DD_Work_Order__c/fields/Work_Order_JSON__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_JSON__c</fullName>
    <label>Work Order JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>