force-app/main/default/objects/DD_Work_Order__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass Record Generation</fullName>
                <default>true</default>
                <label>Mass Record Generation</label>
            </value>
            <value>
                <fullName>Automated QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>