force-app/main/default/objects/DD_Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Lookup_Field__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Parent_Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>